[DOCS]: Updated diagrams